catch up to act-1.7.0; add `-XX:MaxPermSize=128M` JVM argument for Java7