@@ -3,5 +3,5 @@ setlocal & pushd
 set APP_ENTRY=${app.entry}
 set BASE=%~dp0
 set CP=%BASE%\classes;%BASE%\lib\*
-java -Dapp.mode=prod -Dprofile=%PROFILE% -cp "%CP%" %APP_ENTRY%
+java -server -Xms512m -Xmx2g -XX:MaxPermSize=128M -Dapp.mode=prod -Dprofile=%PROFILE% -cp "%CP%" %APP_ENTRY%
 endlocal & popd
